- Refactor: Remove empty method TuitionInstallmentTariff::updatePriceValuesInEvent
- Improvement: Add new service to create tuition payment plan debts, that support recalculation of installments and and easier fluid interface to pass the arguments to the service

10.1.0 (10-07-2023)
- New feature: Tuition payment plan aggregators

10.0.0 (07-06-2023)
- New feature: Domain model tuition payment plan calculators

9.0.0 (25-05-2023)
- New Feature: Dynamic interest rate calculators

8.7.3 (23-05-2023)
- Improvement: Present document certification number and date in debt and payments reports

8.7.2 (17-04-2023)
- Bug Fix: Add temporary trigger to fix labels of due date calculation type #UL-REIT-3144

8.7.1 (12-04-2023)
- Improvement: In the process of creating registration tuition debts, check if tuition will be created before check if the person has fiscal data properly filled

8.7.0 (10-03-2023)
- New Feature: New academic debt generation rule strategy to create tuition installments and academic debts

8.6.9 (08-03-2023)
- Bug Fix: Consider all registrations of degree curricular plan, and not only registrations with active curricular plan

8.6.8 (06-03-2023)
- Bug Fix: Validate if custom academic debt amount is positive
- Bug Fix: In treasury event details, present the custom academic debt date

8.6.7 (16-02-2023)
- Bug Fix: Apply fix for debt date for academic tax, when student is not enrolled in curricular units

8.6.6 (15-02-2023)
- Improvement: Do not check if a finantial document maybe be integrated with success

8.6.5 (10-02-2023)
- Refactor: Remove method Customer::getFiscalCountry and other related methods of similar name. This method cause some confusion and is replaced by Customer::getAddressCountryCode

8.6.4 (09-02-2023)
- Bug Fix: Fix NPE in creating tuitions for registration, specifically in calculating the discounts table

8.6.3 (07-02-2023)