@@ -26,12 +26,12 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>40.15.3</version>
+			<version>40.16.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-treasury-base</artifactId>
-			<version>11.0.4</version>
+			<version>11.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
